--- a/qtfuzzylite/ui/resources.qrc
+++ b/qtfuzzylite/ui/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
-  <qresource prefix="icons">
+  <qresource>
     <file>icons/colorize.png</file>
     <file>icons/messagebox_info.png</file>
     <file>icons/exit.png</file>
@@ -16,6 +16,6 @@
     <file>icons/edit_add.png</file>
     <file>icons/edit_remove.png</file>
     <file>icons/pencil.png</file>
-    <file>icons/donate.gif</file>
+    <file>icons/btn_donateCC_LG.gif</file>
   </qresource>
 </RCC>
