--- a/qtfuzzylite/ui/Viewer.ui
+++ b/qtfuzzylite/ui/Viewer.ui
@@ -173,7 +173,7 @@
        </property>
        <property name="styleSheet">
         <string notr="true">QSlider::handle:horizontal {
-image: url(:/icons/icons/1uparrow.png);
+image: url(:/icons/1uparrow.png);
 padding-left: -4px; padding-right: -4px;
  border: 1px solid #5c5c5c;
 border-radius: 8px;
