Application icon created for Mac OSX. Bounds added to Discrete term.

--- a/qtfuzzylite/ui/Term.ui
+++ b/qtfuzzylite/ui/Term.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>251</width>
-    <height>468</height>
+    <width>270</width>
+    <height>490</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -366,8 +366,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>219</width>
-              <height>202</height>
+              <width>238</width>
+              <height>224</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -399,6 +399,9 @@
               <layout class="QVBoxLayout" name="verticalLayout_14">
                <property name="topMargin">
                 <number>0</number>
+               </property>
+               <property name="bottomMargin">
+                <number>6</number>
                </property>
                <item>
                 <layout class="QFormLayout" name="formLayout_6">
@@ -450,7 +453,7 @@
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_3">
                  <property name="bottomMargin">
-                  <number>6</number>
+                  <number>0</number>
                  </property>
                  <item>
                   <widget class="QToolButton" name="btn_discrete_parse">
@@ -912,8 +915,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>219</width>
-              <height>134</height>
+              <width>238</width>
+              <height>156</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -936,7 +939,7 @@
               <number>9</number>
              </property>
              <property name="bottomMargin">
-              <number>0</number>
+              <number>6</number>
              </property>
              <item>
               <layout class="QFormLayout" name="formLayout_14">
@@ -1039,8 +1042,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>219</width>
-              <height>202</height>
+              <width>238</width>
+              <height>224</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -1249,8 +1252,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>219</width>
-              <height>202</height>
+              <width>238</width>
+              <height>224</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -1273,7 +1276,7 @@
               <number>9</number>
              </property>
              <property name="bottomMargin">
-              <number>0</number>
+              <number>6</number>
              </property>
              <item>
               <layout class="QFormLayout" name="formLayout_11">
